--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 CHANGELOG:
+28 february 2005
+	fixed gtk# garbage collector bug in nplot graphs
+	fixed bug in graphs with sex
+
 21 february 2005
 	first graphs: global and person both multisession and simplesession
 
