All Reactive Jumps are working (i think) with the new chronopic code Delete files serial.* (old jump detection method) Write the jumps in seconds Bug repaired in showing identifier of reactive jumps in treeviewRj.Add Show first TC, later TV in treeviews

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 CHANGELOG:
+15 march 2005
+	all Reactive Jumps are working (i think) with the new chronopic code
+	delete files serial.* (old jump detection method)
+	write the jumps in seconds
+	bug repaired in showing identifier of reactive jumps in treeviewRj.Add
+	show first TC, later TV in treeviews
+
 14 march 2005
 	normal jumps and fall jumps now managed by new chronopic module (reactive jumps pending)
 	
