--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 CHANGELOG:
+22 march 2005
+	threads in jumps (all jumps work Ok)
+	ProgressBar in jumps
+	Cancel jumps implemented
+	Not jumps overlap (not possible to press a jump button while we are jumping)
+
 15 march 2005
 	all Reactive Jumps are working (i think) with the new chronopic code
 	delete files serial.* (old jump detection method)
