height in all stats and graphs (selectable in preferences the preferred value (height or tv) in one-data charts)  (closes Task: 258)
Changed test-saltos-mono to chronopjump-mini, now suitable for showing TV and TC

bugs:
        repaired sorting in indexes (closes Task: 261)
        Fixed bug not showing weight in jumpRj
        Fixed bugs in deleting jumps and jumpsRj (just added in the treeviews)
        Fixed bug adding the first new Rjs in treeviewRj
        Fixed bug in load session window, when some sessions are deleted

other:
        update stats always checkbutton (marked by default)
        button for repeat last jump
        button for finnish rj jumps (and save until that moment)
        changed name of function and files: rjPotencyAguado for rjPotencyBosco

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,22 +1,20 @@
-TODO:
-----
+TODO CURRENTLY NOT ADDED IN TASK MANAGER:
+----------------------------------------
 
-make CSV export do initial speed and height
+NEW FUTURE FEATURE (TEMPO): Avaluate the capacity of a person in following a tempo (o pulsation). 
+- Person can follow the tempo that they want and try to evaluate the accuracy. 
+- Or a rhythm (random or predefined) is presented by the program (with the buzzer) and the person has to follow it with the help of the buzzer or without it.
+- The Rhythm can be played with gtick (metronome)
 
-index Q=tv/tc
 
 Hability of changing sensibility from chronojump
 
-RUNS: treeViewRunInterval, runs execution, edit, delete
 
 BUGS:
-- repair bug in treeviews, jumper's get not automatically expanded when make the first jump
-- repair bug in indexes sorting (in indexes tab and in global)
 
 make that serial connection can be stablished regardless before a modem has been used in the same port
 
 graphs:
-	study licensing problems of NPlot or how to include it
 	put a button for refreshing the graph
 
 show better info in the RJ jump edit
